crates/oxc_coverage_instrument/tests/instrument/snapshots/instrument__snapshot__arrow_expression_body_code.snap
---
source: crates/oxc_coverage_instrument/tests/snapshot_test.rs
expression: code_without_preamble(&result.code)
---
++cov_18ab365425.s[0];
const double = (x) => {
	++cov_18ab365425.f[0];
	++cov_18ab365425.s[1];
	return x * 2;
};
