crates/oxc_coverage_instrument/tests/instrument/snapshots/instrument__snapshot__nullish_coalescing_coverage_map.snap
---
source: tests/instrument/snapshot.rs
expression: result.coverage_map
---
{
  "path": "test.js",
  "statementMap": {
    "0": {
      "start": {
        "line": 1,
        "column": 10
      },
      "end": {
        "line": 1,
        "column": 16
      }
    }
  },
  "fnMap": {},
  "branchMap": {
    "0": {
      "loc": {
        "start": {
          "line": 1,
          "column": 10
        },
        "end": {
          "line": 1,
          "column": 16
        }
      },
      "line": 1,
      "type": "binary-expr",
      "locations": [
        {
          "start": {
            "line": 1,
            "column": 10
          },
          "end": {
            "line": 1,
            "column": 11
          }
        },
        {
          "start": {
            "line": 1,
            "column": 15
          },
          "end": {
            "line": 1,
            "column": 16
          }
        }
      ]
    }
  },
  "s": {
    "0": 0
  },
  "f": {},
  "b": {
    "0": [
      0,
      0
    ]
  }
}
